# MultiImageFilter

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cc
example/src/: main.cc
include/: multiimagefilter.h
src/: filter.h  main.cc  multiimagefilter.cc
src/filters/: basefilter.h  bilateralfilter.cc  bilateralfilter.h  blur.cc  blur.h  color.cc  color.h  gaussianblur.h  medianblur.cc  medianblur.h  morphologyoperation.cc  morphologyoperation.h  none.cc  none.h  resize.cc  resize.h  sobel.cc  sobel.h  threshold.cc  threshold.h
